[package]
name = "knob_rocker"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "sync"] }

rspotify = { version = "0.13.1", features = ["env-file", "cli"] }
dialoguer = "0.11.0"

windows-hotkeys = "0.2.1"
winapi = { version = "0.3", features = ["winuser", "wincon"] }
tray-item = "0.10.0"

dotenvy = "0.15.7"
toml = "0.8.14"
env_logger = "0.11.3"
log = "0.4.21"

[build-dependencies]
windres = "*"
